--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -70,7 +70,7 @@
 						<p>77 East Polk Street <br> Phoenix, Arizona, 85004</p>
 						<p>Phone: <a href="tel:602-710-1240" class="text-white">602-710-1240</a></p>
 						<p>Website: <a href="https://secure3.hilton.com/en_US/hp/reservation/book.htm?inputModule=HOTEL&ctyhocn=PHXCTHX&spec_plan=CHHMSW&arrival=20190131&departure=20190208&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT" class="text-white" target="_blank">Hampton Inn & Suites</a></p>
-
+						<p class="text-label red text-uppercase"><strong>Rooms Sold Out</strong></p>
 						<p>Stay at Hampton Inn & Suites Phoenix Downtown and be just steps from it all. Walk to events at Phoenix Convention Center, restaurants at CityScape, Suns games at Talking Stick Resort Arena, and Diamondbacks games at Chase Field – all within a mile of the hotel.</p>
 						<div class="line tiny blue thick"></div>
 						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
@@ -80,7 +80,6 @@
 							<li>Pool/fitness center</li>
 							<li>Laundry/Valet Service</li>
 						</ul>
-						<a class="cta-button navy carat large" href="https://secure3.hilton.com/en_US/hp/reservation/book.htm?inputModule=HOTEL&ctyhocn=PHXCTHX&spec_plan=CHHMSW&arrival=20190131&departure=20190208&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT" target="_blank">Book your room online</a>
 					</div>
 				</div>
 
@@ -90,7 +89,7 @@
 						<p>132 South Central Avenue <br> Phoenix, Arizona, 85004</p>
 						<p>Phone: <a href="tel:602-603-2000" class="text-white">602-603-2000</a></p>
 						<p>Website: <a href="https://www.marriott.com/hotels/travel/phxtw-residence-inn-phoenix-downtown/" class="text-white" target="_blank">Residence Inn Phoenix Downtown</a></p>
-						<p><strong>Room rate $229 per night available from Feb 3rd</strong></p>
+						<p class="text-label red text-uppercase"><strong>Rooms Sold Out</strong></p>
 						<p>Be one of the first to stay in downtown Phoenix's only extended-stay hotel, Residence Inn Phoenix Downtown. The stylish, new space boasts impressive suites and a convenient location near popular attractions such as Chase Field and Comerica Theatre.</p>
 						<div class="line tiny blue thick"></div>
 						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
@@ -100,7 +99,6 @@
 							<li>Valet dry-cleaning</li>
 							<li>Complimentary Full American breakfast</li>
 						</ul>
-						<a class="cta-button navy carat large" href="https://www.marriott.com/hotels/travel/phxtw-residence-inn-phoenix-downtown/" target="_blank">Book your room online</a>
 					</div>
 				</div>
 
@@ -110,7 +108,7 @@
 						<p>15 East Monroe Street <br> Phoenix, Arizona, 85004</p>
 						<p>Phone: <a href="tel:602-396-7161" class="text-white">602-396-7161</a></p>
 						<p>Website: <a href="https://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml?WT.mc_id=POG" class="text-white" target="_blank">Residence Inn Phoenix Downtown</a></p>
-						<p><strong>Room rate $249</strong></p>
+						<p class="text-label red text-uppercase"><strong>Rooms Sold Out</strong></p>
 						<p>Built in 1932, our Phoenix hotel features original Art Deco design and a grand lobby with restored columns and marble touches. Enjoy the easy ambience of Monroe's lobby bar, breakfast in our Garden Grille restaurant, or a savory dinner at Nook Kitchen.</p>
 						<div class="line tiny blue thick"></div>
 						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
@@ -120,7 +118,6 @@
 							<li>24 hr Pavilion Pantry Market</li>
 							<li>Laundry/Valet Service</li>
 						</ul>
-						<a class="cta-button navy carat large" href="https://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml?WT.mc_id=POG" target="_blank">Book your room online</a>
 					</div>
 				</div>
 			</div>
@@ -143,7 +140,7 @@
 						<p>340 North 3rd Street <br> Phoenix, Arizona, 85004</p>
 						<p>Phone: <a href="tel:602-262-2500" class="text-white">602.262.2500</a></p>
 						<p>Website: <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1544552427242&key=GRP&app=resvlink" class="text-white" target="_blank">Sheraton Grand Phoenix</a></p>
-						<p><strong>Room rate $259</strong></p>
+						<p class="text-label red text-uppercase"><strong>Rooms Sold Out</strong></p>
 						<p>The city's largest hotel, Sheraton Grand Phoenix is a contemporary haven in a prime location. Unpack and unwind in stylish rooms and suites, featuring modern essentials, gorgeous city views and a thoughtful collection of signature amenities.</p>
 						<p>Explore a compelling collection of vibrant attractions, including Talking Stick Resort Arena, Arizona State University, CityScape, the Encanto Historic District, Chase Field and Heard Museum. Discover flexible event space for corporate meetings, magical weddings and unforgettable social affairs, all within steps of the Phoenix Convention Center. After a day of business or fun, refresh in our sparkling pool, sip cocktails in our stylish lounge or sit down to delectable local fare at our inviting District American Kitchen & Wine Bar.</p>
 						<p>Just 10 minutes from Sky Harbor International Airport, near endless entertainment options, our hotel is a welcoming sanctuary in the heart of Phoenix.</p>
@@ -155,7 +152,6 @@
 							<li>Pool/fitness center</li>
 							<li>Pet Friendly</li>
 						</ul>
-						<a class="cta-button navy carat large" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1544552427242&amp;key=GRP&amp;app=resvlink" target="_blank">Book your room online</a>
 					</div>
 				</div>
 				<div class="col md-4">
@@ -164,7 +160,7 @@
 						<p>122 North Second Street <br> Phoenix, Arizona, 85004</p>
 						<p>Phone: <a href="tel:602-252-1234" class="text-white">602.252.1234</a></p>
 						<p>Website: <a href="https://www.hyatt.com/en-US/hotel/arizona/hyatt-regency-phoenix/phxrp" class="text-white" target="_blank">Hyatt Regency Phoenix</a></p>
-						<p class="text-label red text-uppercase"><strong>Roooms Sold Out</strong></p>
+						<p class="text-label red text-uppercase"><strong>Rooms Sold Out</strong></p>
 						<p class="text-bold text-light-gray">Currently all rooms are sold out. Please call the reservation line to check availability.</p>
 						<p>Located across the street from the Phoenix Convention Center, Hyatt Regency Phoenix places downtown Phoenix at your feet. Walk to the Arizona Center Shops and entertainment at CityScape, located two blocks from the hotel. Explore museums, culture, the arts, and the vibrant nightlife of downtown Phoenix just outside our doors.</p>
 						<div class="line tiny blue thick"></div>
@@ -185,7 +181,7 @@
 						<p>100 North 1st Street <br> Phoenix, Arizona, 85004</p>
 						<p>Phone: <a href="tel:602-333-0000" class="text-white">602.333.0000</a></p>
 						<p>Website: <a href="https://book.passkey.com/go/MicroStrategyWorld2019" class="text-white" target="_blank">Renaissance Phoenix Downtown Hotel</a></p>
-						<p class="text-label red text-uppercase"><strong>Roooms Sold Out</strong></p>
+						<p class="text-label red text-uppercase"><strong>Rooms Sold Out</strong></p>
 						<p class="text-bold text-light-gray">Currently all rooms are sold out. Please call the reservation line to check availability.</p>
 						<p>Immerse yourself into the vibrant culture of Phoenix by staying at Renaissance Phoenix Downtown Hotel. After experiencing the unique style of our newly reimagined lobby, unwind in your perfectly appointed accommodations, which seamlessly blend modern sophistication with second-home comfort. Upgrade to a hotel suite for optimal space or a Club Level room for exclusive Club Lounge access. Keep your workout routine in our modern fitness center, or relax in our heated rooftop pool. Before a day exploring downtown Phoenix or business, start your day with a coffee beverage from our on-site Starbucks® or a tempting breakfast from Marston's Cafe.</p>
 						<p> For a taste of the Southwest, visit Dust Cutter, our hotel's signature restaurant. Hold your next meeting or special event with us. Our hotel boasts over 51,000 square feet of flexible event space. Along with our proximity to the Phoenix Convention Center, attendees will appreciate our hotel's ideal downtown location near Chase Field, Talking Stick Resort Arena and more.</p>
