--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -7,7 +7,10 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Document</title>
         <link rel="stylesheet" href="../CSS/min/main.min.css">
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+            crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -202,7 +205,7 @@
                             </div>
                             <span class="text-label blue">Keynote Speaker</span>
                             <p class="h4 text-normal">Michael J. Saylor</p>
-                            <p>President, Chairman of the Board, and CEO, MicroStrategy</p>
+                            <p> Chairman, President & CEO, MicroStrategy</p>
                             <!-- <h3>The Vision of an Intelligent Enterprise</h3> -->
                         </div>
                     </div>
@@ -702,34 +705,16 @@
                                 <div class="event-day">Thursday</div>
                             </div>
 
-                            <div class="label-col ">
-                                <!-- monday -->
-                                <div class="event-label">Education</div>
-                                <div class="event-label">Expo Hall &amp; Lounge</div>
-                                <div class="event-label">Partner Forum</div>
-                                <!-- Tuesday -->
-                                <div class="event-label">General Session</div>
-                                <div class="event-label">Sessions &amp; Workshops</div>
-                                <div class="event-label">Executive Forum</div>
-                                <div class="event-label">Women’s Networking Reception</div>
-                                <div class="event-label">Block Party</div>
-                                <!-- Wednesday -->
-                                <div class="event-label">Futures Presentation</div>
-                                <!-- monday through Wednesday -->
-                                <div class="event-label">Datathon</div>
-                            </div>
-
                             <div class="event-col">
-                                <span class="event-title" title="Education">Education</span>
-                                <span class="event-title" title="Education">Education</span>
+                                <span class="event-title" title="Education">Pre-Event Education Courses</span>
+                                <span class="event-title" title="Education">Post-Event Education Courses</span>
                                 <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
                                 <span class="event-title" title="Partner Forum">Partner Forum</span>
                                 <span class="event-title" title="Continental General Session">General Session</span>
                                 <span class="event-title" title="SessionsWorkshops">Sessions &amp; Workshops</span>
                                 <span class="event-title" title=" Executive Forum">Executive Forum</span>
-                                <span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking
-                                    Reception</span>
-                                <span class="event-title" title="Block Party">Block Party</span>
+                                <span class="event-title" title="At the Table Panel &amp; Women in Technology Panel & Networking">Women in Technology Panel & Networking</span>
+                                <span class="event-title" title="MicroStrategy Block Party at The Duce">MicroStrategy Block Party at The Duce</span>
                                 <span class="event-title" title="Futures Presentation">Futures Presentation</span>
                                 <span class="event-title" title="Datathon">Datathon</span>
                             </div>
@@ -741,35 +726,26 @@
                 <div class="row hide-md compact z-1">
                     <div class="col">
                         <div class="agenda-bars-mobile">
-
-                            <div class="day-label">
-                                <div class="event-day">Monday</div>
-                                <div class="event-day">Tuesday</div>
-                                <div class="event-day">Wednesday</div>
-                                <div class="event-day">Thursday</div>
-                            </div>
-
                             <div class="event-col">
-                                <span class="event-title" title="Education">Education</span>
+                                <h3>Monday</h3>
+                                <span class="event-title" title="Education">Pre-Event Education Courses</span>
                                 <span class="event-title" title="Partner Forum">Partner Forum</span>
                                 <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
-
+                                <h3>Tuesday</h3>
                                 <span class="event-title" title="Continental General Session">General Session</span>
                                 <span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
                                 <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
-                                <span class="event-title" title="Block Party">Block Party</span>
+                                <span class="event-title" title="MicroStrategy Block Party at The Duce">MicroStrategy Block Party at The Duce</span>
                                 <span class="event-title" title="Executive Forum">Executive Forum</span>
-                                <span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking
-                                    Reception</span>
+                                <span class="event-title" title="At the Table Panel &amp; Women in Technology Panel & Networking">Women in Technology Panel & Networking</span>
                                 <span class="event-title" title="Datathon">Datathon</span>
-
-                                <span class="event-title" title="General Session">General Session</span>
+                                <h3>Wednesday</h3>
+                                <span class="event-title" title="General Session">General Session & Futures</span>
                                 <span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
                                 <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
-                                <span class="event-title" title="Futures Presentation">Futures Presentation</span>
                                 <span class="event-title" title="Datathon">Datathon</span>
-
-                                <span class="event-title" title="Education">Education</span>
+                                <h3>Thursday</h3>
+                                <span class="event-title" title="Education">Post-Event Education Courses</span>
                             </div>
                         </div>
                     </div>
@@ -889,7 +865,7 @@
                                     </div>
                                     <div class="time-block">
                                         <div class="time-label">10:00am – 12:00pm</div>
-                                        General Session
+                                        General Session & Futures
                                     </div>
                                     <div class="time-block">
                                         <div class="time-label">12:00pm – 2:00pm</div>
@@ -918,7 +894,7 @@
                     </div>
                     <div class="col sm-12">
                         <div class="agenda-day">
-                            <h5 class="text-uppercase text-bold">Exhibit Hall Hours</h5>
+                            <h5 class="text-uppercase text-bold">Exhibit Hall & Lounge</h5>
                             <div class="row collapse-y">
                                 <div class="col md-4">
                                     <div class="time-block">
@@ -1418,6 +1394,64 @@
 		}
         </style>
         {[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
+
+        <script type="text/javascript" src="https://www.microstrategy.com/cmstemplates/microstrategy/bower_components/slick-carousel/slick/slick.min.js"></script>
+        <script type="text/javascript">
+            jQuery(document).ready(function($) {
+                $('.logo-slider').slick({
+                    autoplay: true,
+                    autoplaySpeed: 3500,
+                    cssEase: 'ease-out',
+                    slidesToShow: 6,
+                    slidesToScroll: 6,
+                    draggable: true,
+                    swipe: true,
+                    touchMove: true,
+                    pauseOnFocus: true,
+                    pauseOnHover: true,
+                    arrows: true,
+                    prevArrow: '<button type="button" class="slick-prev"></button>',
+                    nextArrow: '<button type="button" class="slick-next"></button>',
+                    responsive: [
+                        {
+                            breakpoint: 1440,
+                            settings: {
+                                slidesToShow: 6,
+                                slidesToScroll: 6
+                            }
+                        },
+                        {
+                            breakpoint: 1200,
+                            settings: {
+                                slidesToShow: 5,
+                                slidesToScroll: 5
+                            }
+                        },
+                        {
+                            breakpoint: 1024,
+                            settings: {
+                                slidesToShow: 4,
+                                slidesToScroll: 4
+                            }
+                        },
+                        {
+                            breakpoint: 768,
+                            settings: {
+                                slidesToShow: 3,
+                                slidesToScroll: 3
+                            }
+                        },
+                        {
+                            breakpoint: 400,
+                            settings: {
+                                slidesToShow: 2,
+                                slidesToScroll: 2
+                            }
+                        }
+                    ]
+                });
+            });
+        </script>
     </body>
 
 </html>
